<resources>
    <string name="app_name">SpamFree</string>
    <string name="splash_activity_app_name">Spam<b>FREE</b></string>

    <string name="default_notification_channel_id" translatable="false">fcm_notification_channel_id</string>
    <string name="default_notification_channel_name" translatable="false">New Messages</string>

    <!-- Error/Info messages -->
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="detailed_error">An unknown error occurred. Check your internet connection and try again.</string>
    <string name="share_code_subject">Add me on SpamFree </string>
    <string name="share_code_text">Add me on SpamFree, using this code: %1$s.</string>
    <string name="share_code_title">Share using</string>
    <string name="wrong_code">Wrong code. Try again</string>
    <string name="own_code_error">You can\'t use one of your own codes!</string>
    <string name="request_sent">Request sent</string>
    <string name="used_code">This code has already been used.</string>
    <string name="failed_to_add_new_code">Couldn\'t add new code. Check your connection and try again.</string>
    <string name="need_location_permission">We need access to your location for ensuring safety.</string>
    <string name="months_greater_error">You typed a value bigger than allowed.</string>
    <string name="months_fewer_error">New value is less than the current.</string>
    <string name="generic_empty_text_error">Please try a different input.</string>

    <!-- Misc -->
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_requests">Requests</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_codes">Codes</string>
    <string name="accept_caps">ACCEPT</string>
    <string name="decline_caps">DECLINE</string>
    <string name="unused">unused</string>
    <string name="active">active</string>
    <string name="used">used</string>
    <string name="at">At:</string>
    <string name="expired">expired</string>

    <!-- Menu -->
    <string name="action_settings">Account Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="menu_action_messages">Messages</string>
    <string name="menu_action_date">Expiration date</string>

    <!-- RequestsFragment -->
    <string name="incoming_requests">Incoming Requests</string>
    <string name="empty_incoming_requests">You have no incoming requests yet.</string>
    <string name="outgoing_requests">Sent Requests</string>
    <string name="empty_outgoing_requests">You haven\'t sent any requests yet.</string>

    <!-- Settings Activity-->
    <string name="new_status">New Status</string>
    <string name="user_default_status">Hi there, I am using SpamFree</string>
    <string name="default_user_image_name">default</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>

    <!-- Request Response Message -->
    <string name="inexistent_code">This code doesn\'t exist! Try again.</string>
    <string name="req_code_unusable">The code you entered is not valid!</string>
    <string name="existing_req">You have already sent a request to that person!</string>
    <string name="existing_chat">You are already chatting with that persons</string>
    <string name="req_sent_successfully">Your request was sent successfully</string>

</resources>
