<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true">

    <data>

        <import type="android.view.View" />

        <variable
            name="isLoading"
            type="Boolean" />

        <variable
            name="showButtons"
            type="Boolean" />

        <variable
            name="user"
            type="xoulis.xaris.com.spamfree.data.vo.User" />

        <variable
            name="handler"
            type="xoulis.xaris.com.spamfree.view.settings.ProfileFragment" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settings_activity_root"
        android:layout_width="match_parent"
        android:elevation="6dp"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/settings_back_arrow_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar_imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_default_avatar"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:loadUserImage="@{user.image ?? ``}" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <TextView
            android:id="@+id/user_full_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:text="@{user.name}"
            android:textAlignment="center"
            android:textColor="@color/defaultTextColor"
            android:textSize="24sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline1"
            tools:text="Display Name" />

        <TextView
            android:id="@+id/user_personal_message_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{user.status}"
            android:textAlignment="center"
            android:textColor="@color/defaultTextColor"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/user_full_name_textView"
            app:layout_constraintStart_toStartOf="@+id/user_full_name_textView"
            app:layout_constraintTop_toBottomOf="@+id/user_full_name_textView"
            tools:text="@string/user_default_status" />

        <Button
            android:id="@+id/user_change_image_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/defaultTextColor"
            android:onClick="@{() -> handler.onImageChangeClick()}"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/change_image"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/user_change_status_button"
            app:layout_constraintEnd_toEndOf="@+id/user_change_status_button"
            app:layout_constraintStart_toStartOf="@+id/user_change_status_button" />

        <Button
            android:id="@+id/user_change_status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorAccent"
            android:enabled="@{!isLoading}"
            android:onClick="@{() -> handler.onStatusChangeClick(user)}"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/change_status"
            android:textAlignment="center"
            android:textColor="@color/defaultTextColor"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <android.support.constraint.Group
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{showButtons ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="user_change_image_button,user_change_status_button" />

    </android.support.constraint.ConstraintLayout>

</layout>